# dist/swagger.json
@@ -273,87 +273,5 @@
                 }
             }
         }
-    },
-    "components": {
-        "schemas": {
-            "Activity": {
-                "type": "object",
-                "properties": {
-                    "_id": {
-                        "type": "string",
-                        "description": "The unique identifier for the activity"
-                    },
-                    "action": {
-                        "type": "string",
-                        "description": "The action performed by the user"
-                    },
-                    "time": {
-                        "type": "string",
-                        "format": "date-time",
-                        "description": "The timestamp when the activity was performed"
-                    },
-                    "user": {
-                        "type": "string",
-                        "description": "The ID of the user who performed the activity"
-                    },
-                    "ip": {
-                        "type": "string",
-                        "description": "The IP address of the user who performed the activity"
-                    }
-                },
-                "example": {
-                    "_id": "6156d5a6c583bc6de9b6c5b8",
-                    "action": "login",
-                    "time": "2021-10-01T08:00:00.000Z",
-                    "user": "6156d5a6c583bc6de9b6c5b7",
-                    "ip": "192.168.0.1"
-                }
-            }
-        },
-        "responses": {
-            "Unauthorized": { "description": "Invalid authentication token" },
-            "InternalServerError": {
-                "description": "An unexpected error occurred on the server"
-            }
-        },
-        "securitySchemes": {
-            "bearerAuth": {
-                "type": "http",
-                "scheme": "bearer",
-                "bearerFormat": "JWT"
-            }
-        }
-    },
-    "definitions": {
-        "usersResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "userReg": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "InvalidResponse": {
-            "type": "object",
-            "properties": {
-                "statusCode": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                }
-            }
-        }
     }
 }
